--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,9 @@
 [defaults]
-stdout_callback = ansible.builtin.yaml
+stdout_callback = ansible.builtin.default
+# Tell the default callback to render as YAML:
+callback_result_format = yaml
+# (optional) prettier wrapping for YAML:
+callback_format_pretty = true
 host_key_checking = False
 roles_path = ansible/roles
 deprecation_warnings = False
