--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,8 @@ stdout_callback = ansible.builtin.default
 callback_result_format = yaml
 # (optional) prettier wrapping for YAML:
 callback_format_pretty = true
+callback_enabled = write_l3_summary
+callback_plugins = ./ansible/callback_plugins
 host_key_checking = False
 roles_path = ansible/roles
 deprecation_warnings = False
