--- a/.github/workflows/workflow-d-rebuild.yml
+++ b/.github/workflows/workflow-d-rebuild.yml
@@ -109,7 +109,7 @@ jobs:
           APPLY: "1"
         run: |
           echo "=== Rebuilding DevOps VM from template (Terraform APPLY=1) ==="
-          make l2-apply-devops
+          make l2-apply
 
       #####################################################################
       # TODO: Step 4 — Optional smoke check
