--- a/.github/workflows/workflow-d-rebuild.yml
+++ b/.github/workflows/workflow-d-rebuild.yml
@@ -111,8 +111,18 @@ jobs:
           echo "=== Rebuilding DevOps VM from template (Terraform APPLY=1) ==="
           make l2-apply
 
+      #################################################################
+      # Step 4 — Smoke test the rebuilt DevOps host (Ansible)
+      #################################################################
+      - name: Step 4 - Smoke test DevOps host (Ansible ping + uptime)
+        if: ${{ success() }}  # only run if destroy + rebuild succeeded
+        env:
+          ANSIBLE_PRIVATE_KEY_FILE: "$HOME/.ssh/id_ed25519"
+        run: |
+          echo "=== Running L4 smoke test ==="
+          make l4-smoke
+
       #####################################################################
-      # TODO: Step 4 — Optional smoke check
       # TODO: Step 5 — L3 converge
       # TODO: Step 6 — Upload L2 + L3 artifacts
       #####################################################################
