--- a/.github/workflows/workflow-d-rebuild.yml
+++ b/.github/workflows/workflow-d-rebuild.yml
@@ -122,7 +122,17 @@ jobs:
           echo "=== Running L4 smoke test ==="
           make l4-smoke
 
+      #################################################################
+      # Step 5 — L3 Converge DevOps host (Ansible)
+      #################################################################
+      - name: Step 5 - L3 converge DevOps host
+        if: ${{ success() }}  # only if smoke test passed
+        env:
+          ANSIBLE_PRIVATE_KEY_FILE: "$HOME/.ssh/id_ed25519"
+        run: |
+          echo "=== Running L3 converge (make l3-apply) ==="
+          make l3-apply
+
       #####################################################################
-      # TODO: Step 5 — L3 converge
       # TODO: Step 6 — Upload L2 + L3 artifacts
       #####################################################################
