--- a/.github/workflows/devops-b.yml
+++ b/.github/workflows/devops-b.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  devops-b:
+  template-builder:
     timeout-minutes: 20
     environment: lab
     runs-on:
@@ -39,6 +39,12 @@ jobs:
       - name: Setup Packer
         uses: hashicorp/setup-packer@v3
 
+      ## sanity check that proxmox is ready
+      - name: Proxmox validations
+        run: |
+          set -euo pipefail
+          make l0-runway
+
       ## build template using packer and export manifest
       - name: Packer init and validate
         run: |
@@ -46,12 +52,12 @@ jobs:
           make l1-init
           make l1-validate
 
-      - name: Packer template build
+      - name: Packer build
         run: |
           set -euo pipefail
           make l1-build
 
-      - name: L1 manifest
+      - name: Create manifest
         run: |
           set -euo pipefail
           make l1-manifest
@@ -59,4 +65,12 @@ jobs:
       - name: List artifacts
         run: ls -lah artifacts/l1_images
 
-      ## create and upload manifest artifact
+      ## Upload manifest artifacts
+      - name: Upload artifacts
+        if: ${{ success() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: devops-b-artifacts
+          path: artifacts/l1_images
+          retention-days: 28
+          if-no-files-found: warn
